force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_ACV__c.field-meta.xml
<CustomField>
        <fullName>Account_ACV__c</fullName>
        <formula>SBQQ__Quote__r.Account_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>