force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Revenue_Discount__c.field-meta.xml
<CustomField>
        <fullName>Account_Revenue_Discount__c</fullName>
        <label>Account Revenue Discount %</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </CustomField>