force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
        <fullName>Configuration_Type__c</fullName>
        <description>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</description>
        <formula>TEXT(SBQQ__Product__r.SBQQ__ConfigurationType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</inlineHelpText>
        <label>Configuration Type</label>
        <type>Text</type>
    </CustomField>