force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_DRR__c.field-meta.xml
<CustomField>
        <fullName>CPQ_DRR__c</fullName>
        <description>SFSL-1161</description>
        <formula>SBQQ__NetTotal__c / ( SBQQ__EffectiveEndDate__c -  SBQQ__EffectiveStartDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ DRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>