force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_DRR_Variance__c.field-meta.xml
<CustomField>
        <fullName>CPQ_DRR_Variance__c</fullName>
        <description>SFSL-1161</description>
        <formula>ABS(((CPQ_DRR__c-SBQQ__RenewedSubscription__r.CPQ_DRR__c)/SBQQ__RenewedSubscription__r.CPQ_DRR__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ DRR Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>