force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_DRR_Variance_S__c.field-meta.xml
<CustomField>
        <fullName>CPQ_DRR_Variance_S__c</fullName>
        <description>SFSL-1161
Static - set by process to mitigate formula compilation limits</description>
        <label>CPQ DRR Variance (S)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>