force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_QliACV__c.field-meta.xml
<CustomField>
        <fullName>CPQ_QliACV__c</fullName>
        <label>Quote Line Item ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>