force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQQuoteItemDuration__c.field-meta.xml
<CustomField>
        <fullName>CPQQuoteItemDuration__c</fullName>
        <formula>IF( SBQQ__EffectiveEndDate__c &gt;= SBQQ__EffectiveStartDate__c, SBQQ__EffectiveEndDate__c - SBQQ__EffectiveStartDate__c + 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Item Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>