force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Effective_Start_Date__c</fullName>
        <description>SFSL-868</description>
        <formula>SBQQ__EffectiveStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Start Date</label>
        <type>Date</type>
    </CustomField>