force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Effective_Unit_Price__c.field-meta.xml
<CustomField>
        <fullName>Effective_Unit_Price__c</fullName>
        <description>Unit Price calculated by the QCP after applying various rules</description>
        <label>Effective_Unit_Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>