force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Eligible_for_Premium_Care__c.field-meta.xml
<CustomField>
        <fullName>Eligible_for_Premium_Care__c</fullName>
        <formula>OR(SBQQ__Quote__r.Deal_Type__c &lt;&gt;&#39;Direct&#39;,SBQQ__Product__r.Name&lt;&gt;&#39;UiPath Premium Care&#39;,SBQQ__Product__r.Name=&#39;UiPath Premium Care&#39; &amp;&amp; SBQQ__Quote__r.Account_ACV__c &gt;=75000)</formula>
        <label>Eligible for Premium Care</label>
        <type>Checkbox</type>
    </CustomField>