force-app/main/default/objects/SBQQ__QuoteLine__c/fields/End_Date__c.field-meta.xml
<CustomField>
        <fullName>End_Date__c</fullName>
        <description>Twin fields used to populate Opportunity Product &#39;End Date&#39;</description>
        <formula>SBQQ__EffectiveEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product End Date</label>
        <type>Date</type>
    </CustomField>