force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_UiPath_Core_Product_Or_Non_Production__c.field-meta.xml
<CustomField>
        <fullName>Is_UiPath_Core_Product_Or_Non_Production__c</fullName>
        <description>Return TRUE if current quote line is a UiPath Core Product or UiPath Non-Production</description>
        <formula>AND(SBQQ__Product__r.Vendor__c=&#39;UiPath&#39;,OR(SBQQ__ProductFamily__c=&#39;Core Product&#39;,SBQQ__ProductFamily__c=&#39;Non-Production&#39;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is UiPath Core Product Or Non Production</label>
        <type>Checkbox</type>
    </CustomField>