force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Model__c.field-meta.xml
<CustomField>
        <fullName>License_Model__c</fullName>
        <description>Used for generating Quote Offer and License Orders</description>
        <label>License Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Node Locked</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Concurrent Runtime</fullName>
                </value>
                <value>
                    <fullName>Concurrent User</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>