force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Product_Family__c.field-meta.xml
<CustomField>
        <fullName>Line_Product_Family__c</fullName>
        <description>Stamped version of Product family - Partner, Support, Professional Service or UiPath. To help with Rollup Summary filters</description>
        <label>Line Product Family</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>