force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Maintenance_Flag__c.field-meta.xml
<CustomField>
        <fullName>Maintenance_Flag__c</fullName>
        <formula>TEXT(SBQQ__Quote__r.SBQQ__Account__r.Maintenance_Flag__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Flag</label>
        <type>Text</type>
    </CustomField>