force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_or_Distributor_Discount__c.field-meta.xml
<CustomField>
        <fullName>Partner_or_Distributor_Discount__c</fullName>
        <formula>IF(SBQQ__Quote__r.Deal_Type__c=&#39;Resale&#39;, IF(SBQQ__Quote__r.SBQQ__Distributor__c&lt;&gt;NULL,Partner_Tier_Level_Discount__c  +  Deal_Registration_Status_Discount__c +  Business_Partner_Type_Discount__c ,Partner_Tier_Level_Discount__c  +  Deal_Registration_Status_Discount__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner or Distributor Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>