force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Premium_Care_Amount__c.field-meta.xml
<CustomField>
        <fullName>Premium_Care_Amount__c</fullName>
        <formula>(Subscription_Total__c + Quote_Line_Total__c)*(12/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Care Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>