force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Premium_Plus_Amount__c.field-meta.xml
<CustomField>
        <fullName>Premium_Plus_Amount__c</fullName>
        <formula>(Subscription_Total__c + Quote_Line_Total__c)*(22/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Plus Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>