force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Version__c.field-meta.xml
<CustomField>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Version</valueSetName>
        </valueSet>
    </CustomField>