force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_For_Discount__c.field-meta.xml
<CustomField>
        <fullName>Quantity_For_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity used for Total Discount calculation</description>
        <label>Quantity For Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>