force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Total__c.field-meta.xml
<CustomField>
        <fullName>Quote_Line_Total__c</fullName>
        <description>Populated by a summary variable</description>
        <label>Quote Line Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>