force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Type__c.field-meta.xml
<CustomField>
        <fullName>Quote_Line_Type__c</fullName>
        <description>SFSL-1161</description>
        <formula>IF(
            ISBLANK( SBQQ__RenewedSubscription__c ),&quot;Upsell&quot;,
            (IF(
            CPQ_DRR_Variance_S__c &lt; 0.2, &quot;Renewal&quot;,
            (IF(
            CPQ_DRR_Variance_S__c &gt; 0.2 &amp;&amp;  CPQ_DRR_S__c &gt; SBQQ__RenewedSubscription__r.CPQ_DRR__c, &quot;Expansion&quot;,
            (IF(
            CPQ_DRR_Variance_S__c &gt; 0.2 &amp;&amp; CPQ_DRR_S__c &lt; SBQQ__RenewedSubscription__r.CPQ_DRR__c, &quot;Downgrade&quot;,
            &quot;Calc Error&quot;
            ))
            ))
            ))
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Line Type</label>
        <type>Text</type>
    </CustomField>