force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__EarliestValidAmendmentStartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EarliestValidAmendmentStartDate__c</fullName>
        <description>The earliest safe date for an amendment quote line to start before it becomes back-dated and therefore forbidden.</description>
        <inlineHelpText>The earliest valid start date for this amendment quote line.</inlineHelpText>
        <label>Earliest Valid Amendment Start Date</label>
        <type>Date</type>
    </CustomField>