force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__EffectiveSubscriptionTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EffectiveSubscriptionTerm__c</fullName>
        <description>Effective term for this subscription.</description>
        <formula>IF(ISBLANK(SBQQ__SubscriptionTerm__c),
       IF(ISBLANK(SBQQ__Group__r.SBQQ__SubscriptionTerm__c),SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,SBQQ__Group__r.SBQQ__SubscriptionTerm__c),
       SBQQ__SubscriptionTerm__c
    )</formula>
        <inlineHelpText>Effective term for this subscription.</inlineHelpText>
        <label>Effective Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>