force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PreviousSegmentPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PreviousSegmentPrice__c</fullName>
        <description>When set, this value takes the place of the previous segment&#39;s regular price when calculating Uplift for this segment.</description>
        <inlineHelpText>When set, this value takes the place of the previous segment&#39;s regular price when calculating Uplift for this segment.</inlineHelpText>
        <label>Previous Segment Regular Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>