force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PreviousSegmentUplift__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PreviousSegmentUplift__c</fullName>
        <description>When set, this value takes the place of the previous segment&#39;s uplift amount when calculating Uplift for this segment.</description>
        <inlineHelpText>When set, this value takes the place of the previous segment&#39;s uplift amount when calculating Uplift for this segment.</inlineHelpText>
        <label>Previous Segment Uplift</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>