force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PricingMethodEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricingMethodEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether pricing method can be edited on this line item.</description>
        <inlineHelpText>Flag indicating if this line item&#39;s price is editable.</inlineHelpText>
        <label>Pricing Method Editable</label>
        <type>Checkbox</type>
    </CustomField>