force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ProductSubscriptionType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductSubscriptionType__c</fullName>
        <description>Set the quote line&#39;s product subscription type.</description>
        <inlineHelpText>Set the quote line&#39;s product subscription type.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </CustomField>