force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__SubscriptionType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&#39;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&#39;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </CustomField>